# Stellar-PolyMarket

./: .env.example  .eslintrc.js  .gitignore  .prettierignore  BACKUP_IMPLEMENTATION_SUMMARY.md  BET_CANCELLATION_SUMMARY.md  BetConfirmationModal.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRACT_ATTESTATION_README.md  CONTRIBUTING.md  DYNAMIC_FEE_SCALING_AND_ACCESS_HARDENING.md  FIRESTORE_IMPLEMENTATION_CHECKLIST.md  FIRESTORE_QUICK_SETUP.md  FIXES_SUMMARY.md  GIT_WORKFLOW_504.sh  GOVERNANCE_VOTER_EXPERIENCE.md  How It Works Onboarding.md  IMPLEMENTATION_CHECKLIST_504.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_GUIDE_504.md  IMPLEMENTATION_SUMMARY.md  Justfile  LEADERBOARD_AND_SOCIAL_REPUTATION_README.md  LICENSE  LP_DASHBOARD_IMPLEMENTATION.md  Leaderboardpageui  MarketCountdown.txt  Marketcountdownui  PERMISSIONLESS_LAUNCH_README.md  PR_ADVANCED_VIEW.md  PR_DESCRIPTION.md  README.md  SECURITY_SCANNING_README.md  SOROBAN_CI_CHECKLIST.md  SOROBAN_CI_QUICK_REFERENCE.md  SOROBAN_CI_SUMMARY.md  STRESS_TEST_PR_SUMMARY.md  TODO.md  UIemptystate  (+23 more)
contracts/prediction_market/: BATCH_SETTLEMENT_README.md  BETTING_VAULT_ESCROW.md  CREATION_FEE_README.md  Cargo.toml  GRACEFUL_SHUTDOWN_README.md  POSITION_TOKEN_README.md  STORAGE_OPTIMIZATION.md
contracts/prediction_market/src/: access.rs  checked_math.rs  events.rs  fuzz_arithmetic.rs  lib.rs  lmsr.rs  math.rs  position_token.rs  settlement_math.rs  tests.rs  upgrade_nonce_tests.rs
contracts/prediction_market/src/tests/: mod.rs  test_create_market_deadline.rs  test_place_bet.rs  test_place_bet_validation.rs  test_roles.rs
(+1015 files in other folders)
