[package]
name = "prediction-market"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "21.7.6", features = ["alloc"] }
base64ct = "=1.5.0"
ed25519-dalek = "=2.1.1"

[dev-dependencies]
soroban-sdk = { version = "25.3.0", features = ["testutils"] }
proptest     = { version = "1.4", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace]
